--- a/index.html
+++ b/index.html
@@ -4,138 +4,6 @@
 
 <meta name="color-scheme" content="light dark">
 <meta name="google" value="notranslate">
-
-<script>
-function addRow(name, url, isdir,
-    size, size_string, date_modified, date_modified_string) {
-  if (name == "." || name == "..")
-    return;
-
-  var root = document.location.pathname;
-  if (root.substr(-1) !== "/")
-    root += "/";
-
-  var tbody = document.getElementById("tbody");
-  var row = document.createElement("tr");
-  var file_cell = document.createElement("td");
-  var link = document.createElement("a");
-
-  link.className = isdir ? "icon dir" : "icon file";
-
-  if (isdir) {
-    name = name + "/";
-    url = url + "/";
-    size = 0;
-    size_string = "";
-  } else {
-    link.draggable = "true";
-    link.addEventListener("dragstart", onDragStart, false);
-  }
-  link.innerText = name;
-  link.href = root + url;
-
-  file_cell.dataset.value = name;
-  file_cell.appendChild(link);
-
-  row.appendChild(file_cell);
-  row.appendChild(createCell(size, size_string));
-  row.appendChild(createCell(date_modified, date_modified_string));
-
-  tbody.appendChild(row);
-}
-
-function onDragStart(e) {
-  var el = e.srcElement;
-  var name = el.innerText.replace(":", "");
-  var download_url_data = "application/octet-stream:" + name + ":" + el.href;
-  e.dataTransfer.setData("DownloadURL", download_url_data);
-  e.dataTransfer.effectAllowed = "copy";
-}
-
-function createCell(value, text) {
-  var cell = document.createElement("td");
-  cell.setAttribute("class", "detailsColumn");
-  cell.dataset.value = value;
-  cell.innerText = text;
-  return cell;
-}
-
-function start(location) {
-  var header = document.getElementById("header");
-  header.innerText = header.innerText.replace("LOCATION", location);
-
-  document.getElementById("title").innerText = header.innerText;
-}
-
-function onHasParentDirectory() {
-  var box = document.getElementById("parentDirLinkBox");
-  box.style.display = "block";
-
-  var root = document.location.pathname;
-  if (!root.endsWith("/"))
-    root += "/";
-
-  var link = document.getElementById("parentDirLink");
-  link.href = root + "..";
-}
-
-function sortTable(column) {
-  var theader = document.getElementById("theader");
-  var oldOrder = theader.cells[column].dataset.order || '1';
-  oldOrder = parseInt(oldOrder, 10)
-  var newOrder = 0 - oldOrder;
-  theader.cells[column].dataset.order = newOrder;
-
-  var tbody = document.getElementById("tbody");
-  var rows = tbody.rows;
-  var list = [], i;
-  for (i = 0; i < rows.length; i++) {
-    list.push(rows[i]);
-  }
-
-  list.sort(function(row1, row2) {
-    var a = row1.cells[column].dataset.value;
-    var b = row2.cells[column].dataset.value;
-    if (column) {
-      a = parseInt(a, 10);
-      b = parseInt(b, 10);
-      return a > b ? newOrder : a < b ? oldOrder : 0;
-    }
-
-    // Column 0 is text.
-    if (a > b)
-      return newOrder;
-    if (a < b)
-      return oldOrder;
-    return 0;
-  });
-
-  // Appending an existing child again just moves it.
-  for (i = 0; i < list.length; i++) {
-    tbody.appendChild(list[i]);
-  }
-}
-
-// Add event handlers to column headers.
-function addHandlers(element, column) {
-  element.onclick = (e) => sortTable(column);
-  element.onkeydown = (e) => {
-    if (e.key == 'Enter' || e.key == ' ') {
-      sortTable(column);
-      e.preventDefault();
-    }
-  };
-}
-
-function onLoad() {
-  addHandlers(document.getElementById('nameColumnHeader'), 0);
-  addHandlers(document.getElementById('sizeColumnHeader'), 1);
-  addHandlers(document.getElementById('dateColumnHeader'), 2);
-}
-
-window.addEventListener('DOMContentLoaded', onLoad);
-</script>
-
 <style>
 
   h1 {
@@ -190,42 +58,9 @@ window.addEventListener('DOMContentLoaded', onLoad);
     padding-bottom: 10px;
   }
 </style>
-
-<title id="title">D:\ 的索引</title>
-
+<title id="title">UserInfo</title>
 </head>
-
 <body>
+<h1 id="header">Welocome</h1>
 
-<h1 id="header">D:\ 的索引</h1>
-
-<div id="parentDirLinkBox" style="display:none">
-  <a id="parentDirLink" class="icon up">
-    <span id="parentDirText">[父目录]</span>
-  </a>
-</div>
-
-<table>
-  <thead>
-    <tr class="header" id="theader">
-      <th id="nameColumnHeader" tabindex="0" role="button">名称</th>
-      <th id="sizeColumnHeader" class="detailsColumn" tabindex="0" role="button">
-        大小
-      </th>
-      <th id="dateColumnHeader" class="detailsColumn" tabindex="0" role="button">
-        修改日期
-      </th>
-    </tr>
-  </thead>
-  <tbody id="tbody">
-  <tr><td data-value="$RECYCLE.BIN/"><a class="icon dir" href="file:///D:/$RECYCLE.BIN/">$RECYCLE.BIN/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1690964470">2023/8/2 16:21:10</td></tr><tr><td data-value="0.iso/"><a class="icon dir" href="file:///D:/0.iso/">0.iso/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1690965017">2023/8/2 16:30:17</td></tr><tr><td data-value="编程代码及程序编程代码及程序/"><a class="icon dir" href="file:///D:/%E7%BC%96%E7%A8%8B%E4%BB%A3%E7%A0%81%E5%8F%8A%E7%A8%8B%E5%BA%8F%E7%BC%96%E7%A8%8B%E4%BB%A3%E7%A0%81%E5%8F%8A%E7%A8%8B%E5%BA%8F/">编程代码及程序编程代码及程序/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1693035701">2023/8/26 15:41:41</td></tr><tr><td data-value="迅雷下载/"><a class="icon dir" href="file:///D:/%E8%BF%85%E9%9B%B7%E4%B8%8B%E8%BD%BD/">迅雷下载/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1690971065">2023/8/2 18:11:05</td></tr><tr><td data-value="Administrator/"><a class="icon dir" href="file:///D:/Administrator/">Administrator/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1690970900">2023/8/2 18:08:20</td></tr><tr><td data-value="mail_reception/"><a class="icon dir" href="file:///D:/mail_reception/">mail_reception/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1692346653">2023/8/18 16:17:33</td></tr><tr><td data-value="MyProgrammingFile/"><a class="icon dir" href="file:///D:/MyProgrammingFile/">MyProgrammingFile/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1690965833">2023/8/2 16:43:53</td></tr><tr><td data-value="Others/"><a class="icon dir" href="file:///D:/Others/">Others/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1690970934">2023/8/2 18:08:54</td></tr><tr><td data-value="System Volume Information/"><a class="icon dir" href="file:///D:/System%20Volume%20Information/">System Volume Information/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1690979627">2023/8/2 20:33:47</td></tr><tr><td data-value="Virtual Machines/"><a class="icon dir" href="file:///D:/Virtual%20Machines/">Virtual Machines/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1691741247">2023/8/11 16:07:27</td></tr><tr><td data-value="WebSite/"><a class="icon dir" href="file:///D:/WebSite/">WebSite/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1690965038">2023/8/2 16:30:38</td></tr><tr><td data-value="Windows Uplue/"><a class="icon dir" href="file:///D:/Windows%20Uplue/">Windows Uplue/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1690970346">2023/8/2 17:59:06</td></tr><tr><td data-value="WINPE/"><a class="icon dir" href="file:///D:/WINPE/">WINPE/</a></td><td class="detailsColumn" data-value="0"></td><td class="detailsColumn" data-value="1690965253">2023/8/2 16:34:13</td></tr><tr><td data-value="Everything-1.4.1.1024.x64-Setup.exe"><a class="icon file" draggable="true" href="file:///D:/Everything-1.4.1.1024.x64-Setup.exe">Everything-1.4.1.1024.x64-Setup.exe</a></td><td class="detailsColumn" data-value="1885848">1.8 MB</td><td class="detailsColumn" data-value="1685496279">2023/5/31 09:24:39</td></tr><tr><td data-value="Everything-1.4.1.1024.x86-Setup.exe"><a class="icon file" draggable="true" href="file:///D:/Everything-1.4.1.1024.x86-Setup.exe">Everything-1.4.1.1024.x86-Setup.exe</a></td><td class="detailsColumn" data-value="1789560">1.7 MB</td><td class="detailsColumn" data-value="1685496277">2023/5/31 09:24:37</td></tr><tr><td data-value="G.iso"><a class="icon file" draggable="true" href="file:///D:/G.iso">G.iso</a></td><td class="detailsColumn" data-value="1269852160">1.2 GB</td><td class="detailsColumn" data-value="1692347592">2023/8/18 16:33:12</td></tr><tr><td data-value="OIP-C.jpg"><a class="icon file" draggable="true" href="file:///D:/OIP-C.jpg">OIP-C.jpg</a></td><td class="detailsColumn" data-value="10977">10.7 kB</td><td class="detailsColumn" data-value="1648191360">2022/3/25 14:56:00</td></tr><tr><td data-value="verification.pyperf"><a class="icon file" draggable="true" href="file:///D:/verification.pyperf">verification.pyperf</a></td><td class="detailsColumn" data-value="687">687 B</td><td class="detailsColumn" data-value="1691573671">2023/8/9 17:34:31</td></tr><tr><td data-value="w.vbs"><a class="icon file" draggable="true" href="file:///D:/w.vbs">w.vbs</a></td><td class="detailsColumn" data-value="827">827 B</td><td class="detailsColumn" data-value="1676192566">2023/2/12 17:02:46</td></tr><tr><td data-value="wifi.bat"><a class="icon file" draggable="true" href="file:///D:/wifi.bat">wifi.bat</a></td><td class="detailsColumn" data-value="142">142 B</td><td class="detailsColumn" data-value="1680562288">2023/4/4 06:51:28</td></tr></tbody>
-</table>
-
-
-
-
-<script>"use strict";var loadTimeData;class LoadTimeData{constructor(){this.data_=null}set data(value){expect(!this.data_,"Re-setting data.");this.data_=value}valueExists(id){return id in this.data_}getValue(id){expect(this.data_,"No data. Did you remember to include strings.js?");const value=this.data_[id];expect(typeof value!=="undefined","Could not find value for "+id);return value}getString(id){const value=this.getValue(id);expectIsType(id,value,"string");return value}getStringF(id,var_args){const value=this.getString(id);if(!value){return""}const args=Array.prototype.slice.call(arguments);args[0]=value;return this.substituteString.apply(this,args)}substituteString(label,var_args){const varArgs=arguments;return label.replace(/\$(.|$|\n)/g,(function(m){expect(m.match(/\$[$1-9]/),"Unescaped $ found in localized string.");return m==="$$"?"$":varArgs[m[1]]}))}getBoolean(id){const value=this.getValue(id);expectIsType(id,value,"boolean");return value}getInteger(id){const value=this.getValue(id);expectIsType(id,value,"number");expect(value===Math.floor(value),"Number isn't integer: "+value);return value}overrideValues(replacements){expect(typeof replacements==="object","Replacements must be a dictionary object.");for(const key in replacements){this.data_[key]=replacements[key]}}}function expect(condition,message){if(!condition){throw new Error("Unexpected condition on "+document.location.href+": "+message)}}function expectIsType(id,value,type){expect(typeof value===type,"["+value+"] ("+id+") is not a "+type)}expect(!loadTimeData,"should only include this file once");loadTimeData=new LoadTimeData;window.loadTimeData=loadTimeData;console.warn("crbug/1173575, non-JS module files deprecated.");
-</script><script>loadTimeData.data = {"header":"LOCATION 的索引","headerDateModified":"修改日期","headerName":"名称","headerSize":"大小","language":"zh","parentDirText":"[父目录]","textdirection":"ltr"};</script><script>start("D:\\");</script>
-<script>addRow("$RECYCLE.BIN","$RECYCLE.BIN",1,0,"0 B",1690964470,"2023/8/2 16:21:10");</script>
-<script>addRow("0.iso","0.iso",1,0,"0 B",1690965017,"2023/8/2 16:30:17");</script>
 </body></html>
